# Fluorite

./: .gitignore  .todo  README.md  edges.py  elements.py  graphs.py  layers.py  main.py  nodes.py  pyproject.toml  storage.py  stress_test.py  test_schema.py  архітектура.json  дефолт_нейронка.json
qml/: ClassPanel.qml  EdgeMenu.qml  Node.qml  NodeMenu.qml  Theme.qml  main.qml  qmldir
